# trango

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  STYLE.md  TODO.md  releasenotes.md  word-timing-plan.md
.github/workflows/: ci.yml  deploy-docs.yml  release-deb.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: config.rs  hebrew_word_merge.rs  live_transcription.rs  main.rs  model_picker.rs  niqud_model_picker.rs  niqud_pronunciation.rs  ollama_model_picker.rs  open_media_dialog.rs  open_subtitles_dialog.rs  open_video_dialog.rs  practice_audio_ui.rs  sentence_card.rs  sentence_list.rs  settings_dialog.rs  subtitle_generation.rs  system_audio_capture.rs  vad_model_picker.rs  video_player.rs  word_analysis.rs  word_timing_ui.rs
crates/app/src/video_player/: gl_proc_address_bridge.rs  gl_video_surface.rs
crates/app/tests/: e2e_sentence_navigation.rs
crates/app/ui/: app-window.slint
crates/audio-capture/: Cargo.toml
crates/audio-capture/src/: capture.rs  error.rs  lib.rs  vad.rs
crates/niqud/: Cargo.toml
crates/niqud/src/: cli_output.rs  client.rs  decode.rs  dylib.rs  entry.rs  error.rs  hebrew_detect.rs  lib.rs  onnx_client.rs  process_client.rs  tokenizer.rs  transliterate.rs
crates/niqud/tests/fixtures/: shakhav_logits.json  tokenizer.json
crates/playback-state/: Cargo.toml
crates/playback-state/src/: lib.rs  media_source.rs  mode.rs  navigation.rs  playback_speed.rs  seek_command.rs  state.rs  time_format.rs
crates/practice-audio/: Cargo.toml
crates/practice-audio/src/: error.rs  lib.rs  pieces.rs  process.rs  sentence.rs  tts.rs
crates/subtitle/: Cargo.toml
crates/subtitle/src/: cue.rs  error.rs  generate.rs  lib.rs  merge.rs  srt.rs  word_timing.rs
crates/subtitle/tests/: srt_parsing.rs
crates/subtitle/tests/fixtures/: bom.srt  invalid_timestamp.srt  missing_newline.srt  valid.srt
crates/word-analysis/: Cargo.toml
crates/word-analysis/src/: cache.rs  entry.rs  error.rs  lib.rs  ollama.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/architecture/: crates.md  testing.md  video-playback.md
docs/src/developer/: README.md  specs.md
docs/src/developer/architecture/: README.md  crates.md  system-audio-capture.md  testing.md  video-playback.md
docs/src/developer/technology/: README.md  chrono.md  libmpv2.md  ort.md  serde.md  serde_json.md  slint.md  thiserror.md  toml.md  tracing.md  ureq.md  webrtc-vad.md
docs/src/getting-started/: first-video.md  installation.md
docs/src/specs/: README.md
docs/src/technology/: libmpv2.md  serde_json.md  slint.md  thiserror.md  toml.md  tracing.md
docs/src/usage/: README.md  generating-subtitles.md  keyboard-shortcuts.md  playback-modes.md  practice-audio.md  settings.md  subtitles.md  word-analysis.md  word-timing.md
scripts/: check.sh  deps-check.sh  test.sh
sketch/: design_reference.dc.html
test-media/: README.md
test-media/sample/: sample.fi.srt  sample.srt
tools/niqud-cli/: README.md  niqud_cli.py  requirements.txt
