[package]
name = "trango"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "trango"
path = "src/main.rs"

[dependencies]
anyhow = "1"
libmpv2 = { version = "6", features = ["render"] }
playback-state = { path = "../playback-state" }
serde = { version = "1", features = ["derive"] }
slint = "1.17.1"
subtitle = { path = "../subtitle" }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
word-analysis = { path = "../word-analysis" }

[build-dependencies]
slint-build = "1.17.1"
