[package]
name = "trango"
description = "A desktop video player for language learners, built with Rust, Slint, and libmpv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "trango"
path = "src/main.rs"

[dependencies]
anyhow = "1"
audio-capture = { path = "../audio-capture" }
libmpv2 = { version = "6", features = ["render"] }
playback-state = { path = "../playback-state" }
serde = { version = "1", features = ["derive"] }
slint = "1.17.1"
subtitle = { path = "../subtitle" }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
word-analysis = { path = "../word-analysis" }

[build-dependencies]
slint-build = "1.17.1"

[package.metadata.deb]
maintainer = "Erik Repo <erik.repo@gmail.com>"
copyright = "2026, Erik Repo"
license-file = ["../../LICENSE", "0"]
extended-description = """\
A desktop video player for language learners. Plays video normally or in \
a sentence-by-sentence mode driven by subtitle timing, with word-by-word \
translation lookup and automatic subtitle generation."""
section = "video"
priority = "optional"
depends = "$auto"
