[package]
name = "trango"
description = "A desktop video player for language learners, built with Rust, Slint, and libmpv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "trango"
path = "src/main.rs"

[dependencies]
anyhow = "1"
audio-capture = { path = "../audio-capture" }
chrono = "0.4"
libmpv2 = { version = "6", features = ["render"] }
niqud = { path = "../niqud" }
playback-state = { path = "../playback-state" }
serde = { version = "1", features = ["derive"] }
slint = "1.17.1"
subtitle = { path = "../subtitle" }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
word-analysis = { path = "../word-analysis" }

[build-dependencies]
slint-build = "1.17.1"

[package.metadata.deb]
maintainer = "Erik Repo <erik.repo@gmail.com>"
copyright = "2026, Erik Repo"
license-file = ["../../LICENSE", "0"]
extended-description = """\
A desktop video player for language learners. Plays video normally or in \
a sentence-by-sentence mode driven by subtitle timing, with word-by-word \
translation lookup and automatic subtitle generation."""
section = "video"
priority = "optional"
# $auto (dpkg-shlibdeps) won't pick up libonnxruntime on its own: niqud's
# ort dependency uses load-dynamic (dlopen at runtime), so the binary has
# no link-time ELF reference to it for dpkg-shlibdeps to detect — see
# docs/src/developer/technology/ort.md. Listed explicitly so installing
# this .deb pulls it in automatically; no separate manual install step.
depends = "$auto, libonnxruntime1.23"
