[package]
name = "niqud"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic", "std", "api-23"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tracing = "0.1"
unicode-normalization = "0.1"
